# openapirs

./: Cargo.toml  Makefile  README.md  shell.nix
src/: lib.rs
src/compile/: compiler.rs  data_type.rs  mod.rs  model.rs  schema_chain.rs  schema_compiler.rs  stack.rs
src/compile/operation/: mod.rs  parameter.rs  request_body.rs  response_body.rs
src/model/: mod.rs  name.rs
src/schema/: components.rs  content_type.rs  discriminator.rs  encoding.rs  external_doc.rs  header.rs  http_status_code.rs  media_type.rs  mod.rs  operation.rs  parameter.rs  path.rs  path_item.rs  reference.rs  request_body.rs  response.rs  responses.rs  server.rs  sref.rs  version.rs
src/schema/data_type/: array.rs  default.rs  integer.rs  mod.rs  numerical.rs  object.rs
src/schema/info/: contact.rs  license.rs  mod.rs
src/typing/: always_false.rs  always_true.rs  mod.rs  tagged_string.rs  tagged_uri.rs
test/: test-compile.rs  test-model.rs  test-parse.rs
test/test-vectors/: multiple-types-for-field.yaml  request-body-with-all-of-schema.yaml  request-body-with-any-of-schema.yaml  request-body-with-one-of-schema.yaml
